Make sure dates do not wrap

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -95,6 +95,7 @@
 
 	time {
 		font-variant-numeric: tabular-nums;
+		white-space: nowrap;
 	}
 
 	h1,
